--- a/style.css
+++ b/style.css
@@ -345,7 +345,7 @@ min-height: 400px;
 /*height: calc(52vh - 30px);*/
 background: #fff;
 padding-top: 20px;
-padding-bottom: 20px;
+padding-bottom: 40px;
 }
 
 #team, #services {
@@ -570,9 +570,12 @@ font-weight: 200;
 }
 
 .productcontainer {
+	/*width: 33.33%;*/
+	/*height: auto;*/
+	/*float: left;*/
+	/*position: relative;*/
 	width: 33.33%;
 	height: auto;
-	float: left;
 }
 
 .productlogo {
@@ -597,9 +600,46 @@ font-weight: 200;
 	line-height: 1.3em;
 }
 
+.moreinfo {
+	position: relative;
+	text-align: center;
+	padding: 10px;
+	width: 110px;
+	margin: 0 auto;
+	text-transform: uppercase;
+	border: 1px solid #333;
+	border-radius: 4px;
+	color: #333;
+	cursor: pointer;
+	-webkit-backface-visibility: hidden;
+	-o-transition: .3s;
+	-ms-transition: .3s;
+	-moz-transition: .3s;
+	-webkit-transition: .3s;
+	transition: .3s;
+}
+
+.moreinfo:hover {
+	background: #3d6473;
+	color: #fff;
+	border: 1px solid #3d6473;
+}
+
 #contactinfo {
 	margin: 0 auto;
 	text-align: center;
+}
+
+#mobileproducts {
+	display: none;
+}
+
+#mobileproducts .productcontainer {
+	width: 100%;
+}
+
+#fullprodtable {
+	display: none;
 }
 
 #email {
@@ -646,7 +686,7 @@ display: block;
 height: 100%;
 } */
 
-@media only screen and (min-width: 600px) and (max-width:639px) {
+@media only screen and (max-width:639px) {
 	.topnav li a {
 		padding-left: 10px;
 		padding-right: 10px;
@@ -659,14 +699,28 @@ height: 100%;
 	.logo img {
 	height: 30px;
 	}
+	#fullprodtable {
+		display: none;
+	}
+	#mobileproducts {
+		display: block;
+	}
+
 }
 
 
 @media only screen and (min-width: 640px) and (max-width:700px) {
 	.topnav li a {
-	padding-left: 10px;
-	padding-right: 10px;
+		padding-left: 10px;
+		padding-right: 10px;
 
+	}
+	#fullprodtable {
+		display: none;
+	}
+	#mobileproducts {
+		display: block;
+	}
 }
 
 
@@ -679,10 +733,21 @@ height: 100%;
 		padding-left: 15px;
 		padding-right: 15px;
 	}
+	#fullprodtable {
+	display: block;
+	}
+	#mobileproducts {
+		display: none;
+	}
 }
 
 @media only screen and (min-width:851px) and (max-width : 992px) {
-
+	#fullprodtable {
+		display: block;
+	}
+	#mobileproducts {
+		display: none;
+	}
 }
 
 @media only screen and (min-width:993px) and (max-width:1024px){
@@ -696,7 +761,7 @@ min-height: 400px;
 height: auto;
 background: #fff;
 padding-top: 20px;
-padding-bottom: 20px;
+padding-bottom: 40px;
 }
 #team, #services {
 background: #f5f5f5;
@@ -709,4 +774,19 @@ min-height: 600px;
 	height: auto;
 	overflow: hidden;
 }
+	#fullprodtable {
+		display: block;
+	}
+	#mobileproducts {
+		display: none;
+	}
+}
+
+@media only screen and (min-width:1024px) {
+	#fullprodtable {
+		display: block;
+	}
+	#mobileproducts {
+		display: none;
+	}
 }
