--- a/animate.css
+++ b/animate.css
@@ -13,6 +13,20 @@ Copyright (c) 2014 Daniel Eden
           animation-fill-mode: both;
 }
 
+.animatedfaster {
+    -webkit-animation-duration: 0.5s;
+    animation-duration: 0.5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.animatedslower {
+    -webkit-animation-duration: 3.4s;
+    animation-duration: 3.4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
 .animated.infinite {
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
@@ -1722,11 +1736,126 @@ Copyright (c) 2014 Daniel Eden
   }
 }
 
+@-webkit-keyframes flipInOutX {
+    0% {
+
+    }
+
+    1% {
+        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+        -webkit-transition-timing-function: ease-in;
+        transition-timing-function: ease-in;
+        opacity: 0;
+    }
+
+    12% {
+        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+        -webkit-transition-timing-function: ease-in;
+        transition-timing-function: ease-in;
+    }
+
+    /*18% {*/
+        /*-webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);*/
+        /*transform: perspective(400px) rotate3d(1, 0, 0, 10deg);*/
+        /*opacity: 1;*/
+    /*}*/
+
+    /*24% {*/
+        /*-webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);*/
+        /*transform: perspective(400px) rotate3d(1, 0, 0, -5deg);*/
+    /*}*/
+
+    30% {
+        -webkit-transform: perspective(400px);
+        transform: perspective(400px);
+    }
+
+    60% {
+        -webkit-transform: perspective(400px);
+        transform: perspective(400px);
+    }
+
+    70% {
+        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+        opacity: 1;
+    }
+
+    99% {
+        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+        opacity: 0;
+    }
+
+    100% {
+        display: none;
+    }
+}
+
+@keyframes flipInOutX {
+    0% {
+        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+        -webkit-transition-timing-function: ease-in;
+        transition-timing-function: ease-in;
+        opacity: 0;
+    }
+
+    12% {
+        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+        -webkit-transition-timing-function: ease-in;
+        transition-timing-function: ease-in;
+    }
+
+    18% {
+        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+        opacity: 1;
+    }
+
+    24% {
+        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+    }
+
+    30% {
+        -webkit-transform: perspective(400px);
+        transform: perspective(400px);
+    }
+
+    60% {
+        -webkit-transform: perspective(400px);
+        transform: perspective(400px);
+    }
+
+    70% {
+        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+        opacity: 1;
+    }
+
+    100% {
+        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+        opacity: 0;
+    }
+}
+
 .flipInX {
   -webkit-backface-visibility: visible !important;
           backface-visibility: visible !important;
   -webkit-animation-name: flipInX;
           animation-name: flipInX;
+}
+
+.flipInOutX {
+    -webkit-backface-visibility: visible !important;
+    backface-visibility: visible !important;
+    -webkit-animation-name: flipInOutX;
+    animation-name: flipInOutX;
 }
 
 @-webkit-keyframes flipInY {
