--- a/style.css
+++ b/style.css
@@ -935,6 +935,8 @@ height: 100%;
     display: flex;
 
     -webkit-flex-flow: row wrap;
+.ms-flex-justify-content(center);
+-webkit-justify-content:center;
     justify-content: center;
 }
 
@@ -1102,21 +1104,22 @@ height: 100%;
     color: #fff;
 }
 
-.servicesmob h3{background:#fff;color:inherit;margin:10px;padding:2%;position:relative;text-align:center;height:auto;}
+.servicesmob h3{background:#fff;color:inherit;margin:10px;padding:14px;position:relative;text-align:center;height:auto;}
 .button{background:#3498db;color:#fff;display:block;font-size:16px;margin:20px auto;padding:20px;text-align:center;text-decoration:none;width:48%;}
 .buttons{padding:0 20px 20px; margin-bottom: 10px;}
 .buttons .button{background:#FFF;float:left;margin:5px;}
-.center .slick-center h3{-moz-transform:scale(1.08);-ms-transform:scale(1.08);-o-transform:scale(1.08);-webkit-transform:scale(1.08);opacity:1;transform:scale(1.08);margin: 20px;}
+/*.center .slick-center h3{-moz-transform:scale(1.08);-ms-transform:scale(1.08);-o-transform:scale(1.08);-webkit-transform:scale(1.08);opacity:1;transform:scale(1.08);margin: 20px;}*/
+.center .slick-center h3{opacity:1;}
 .center h3{opacity:0.5;transition:all 300ms ease;}
 .margin-40{margin-bottom:40px;}
 .more,.button.first{margin-top:40px;}
 .slick-slider{margin:30px auto 50px;}
 .slick-slide{width: 300px;}
 
-.slider h1 {
+.slider .heading {
     font-size: 1.8em;
-    height: 2em;
-    line-height: 2em;
+    line-height: 1.3em;
+    margin-top: 7px;
     color: #3d6473;
 }
 
@@ -1192,6 +1195,7 @@ height: 100%;
     }
 }
 
+
 @media only screen and (min-width: 640px) {
 
     .cd-dropdown,
@@ -1237,6 +1241,7 @@ height: 100%;
         width: 80%;
     }
 }
+
 
 @media only screen and (min-width: 851px) {
 
