fixes for mobile site

--- a/style.css
+++ b/style.css
@@ -682,7 +682,8 @@ footer {
 
 .headshot img {
     width: 100%;
-    display: none;
+    /*display: none;*/
+    display: block;
 }
 
 .membername {
