--- a/style.css
+++ b/style.css
@@ -463,7 +463,7 @@ header .container {
 
 .titlecontainer {
     height: 50px;
-    font-size: 2em;
+    font-size: 1.6em;
     font-weight: 400;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
@@ -1211,6 +1211,9 @@ height: 100%;
     }
     .membercontainer {
         width: 216px;
+    }
+    .titlecontainer {
+        font-size: 2em;
     }
 
 }
