--- a/style.css
+++ b/style.css
@@ -1210,6 +1210,19 @@ height: 100%;
     font-weight: 400;
 }
 
+.active-bar {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 4px;
+    background: transparent;
+}
+
+.active .active-bar {
+    background: #3d6473;
+}
+
 .portal-landing {
     background: rgb(224, 224, 224);
 }
