--- a/style.css
+++ b/style.css
@@ -492,7 +492,7 @@ header .container {
     padding-bottom: 50px;
 }
 
-#team, #services {
+#team, #services, #about {
     background: #f5f5f5;
     /*height: 52vh;*/
 }
