rename screenshot file extensions

--- a/views/swift.html
+++ b/views/swift.html
@@ -80,10 +80,10 @@
   </div>
   <div class="mobile-displays">
     <div>
-      <img src="img/swift/1.png">
-      <img src="img/swift/2.png">
-      <img src="img/swift/3.png">
-      <img src="img/swift/4.png">
+      <img src="img/swift/1.PNG">
+      <img src="img/swift/2.PNG">
+      <img src="img/swift/3.PNG">
+      <img src="img/swift/4.PNG">
     </div>
   </div>
   <div class="product-container">
