added contact button on pricing page

--- a/views/pricing.html
+++ b/views/pricing.html
@@ -127,5 +127,12 @@
       </div>
     </div>
   </div>
+  <div class="pricing-section">
+    <div class="cta">Interested? We'd love to hear from you</div>
+    <a class="pricing-btn" href="mailto:hellos@ontel.co?subject=Inquiry" style="color: #fff !important; width: 210px;">
+      <span>hello@ontel.co</span>
+      <div class="icon ion-ios-paperplane"></div>
+    </a>
+  </div>
 </div>
 <site-footer></site-footer>
