--- a/views/about.html
+++ b/views/about.html
@@ -12,7 +12,7 @@
     <div class="section">
       <div class="heading">Our mission: To empower the world with technology</div>
       <div class="content">
-        Helping to build networks that connect people is our passion. We are proud to provide software and services to help businesses and communities build the next-generation networks that help people stay in contact, live better, and create businesses.
+        Helping to build networks that connect people is our passion. We are proud to provide software and services to help businesses and communities build the next-generation networks that help people stay in contact, live better, and create opportunities.
       </div>
     </div>
   </div>
