--- a/css/ontel.css
+++ b/css/ontel.css
@@ -421,7 +421,18 @@ ng-md-icon > svg { -webkit-transition: width 750ms ease-in-out, height 750ms eas
   .pricing-section .pricing-btn:hover { background: rgba(37, 129, 153, 0.85); }
   .testing-intro-list { margin: 50px auto; text-align: left; max-width: 480px; }
   .list-with-desc { margin-top: 30px; }
-  .price-emphasis { font-weight: bold; letter-spacing: 0.05em; } }
+  .price-emphasis { font-weight: bold; letter-spacing: 0.05em; }
+  .always-dark header { background: rgba(43, 43, 43, 0.9); cursor: pointer; }
+  .simplified-layout { padding-top: 70px; }
+  .simplified-layout h2 { font-weight: bold; font-size: 1.3em; margin-top: 1.3em; }
+  .simplified-layout ul { padding-left: 2em; }
+  .simplified-layout ul span { text-decoration: underline; }
+  .simplified-layout p { margin-bottom: 1.3em; }
+  .simplified-layout p span { font-weight: 400; color: #444; }
+  .simplified-layout .last-updated { text-align: center; text-transform: uppercase; color: #888; letter-spacing: 0.06em; font-size: 0.9em; }
+  .utility-buttons { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal !important; -webkit-box-direction: normal !important; -webkit-flex-direction: row !important; -ms-flex-direction: row !important; flex-direction: row !important; -webkit-justify-content: space-around !important; -ms-flex-pack: distribute !important; justify-content: space-around !important; width: 100% !important; max-width: 580px; -webkit-box-align: center !important; -webkit-align-items: center !important; -ms-flex-align: center !important; align-items: center !important; margin: 0 auto; margin-bottom: 1em; }
+  .utility-buttons > div { padding: 0.5em 0.8em; background: #4FC6E6; color: #fff; border-radius: 3px; font-size: 1em; text-transform: uppercase; letter-spacing: 0.06em; cursor: pointer; -webkit-transition: 0.3s all ease; transition: 0.3s all ease; -webkit-align-self: center; -ms-flex-item-align: center; align-self: center; -webkit-box-flex: 0; -webkit-flex: 0 0 200px; -ms-flex: 0 0 200px; flex: 0 0 200px; text-align: center; }
+  .utility-buttons > div:hover { opacity: 0.8; } }
 @media only screen and (min-width: 480px) { .footright { display: inline; }
   .headshot img { display: block; }
   .membername > img { display: none; }
