--- a/views/support.html
+++ b/views/support.html
@@ -7,6 +7,10 @@
     <div class="section">
       <div class="heading">Swift Projects</div>
       <div class="content feature-flex col-flex">
+        <div class="utility-buttons">
+          <div class="" ui-sref="swift-tos">Terms of Service</div>
+          <div class="" ui-sref="swift-privacy">Privacy Policy</div>
+        </div>
         <div>
           <div class="title">User Management</div>
           <div class="body">
