--- a/views/pricing.html
+++ b/views/pricing.html
@@ -91,7 +91,7 @@
           <div>
             <div class="body">
               <ul>
-                <li>Average range of of <span class="price-emphasis">$500-1000</span> per site for Project Management</li>
+                <li>Average range of <span class="price-emphasis">$500-1000</span> per site for Project Management</li>
                 <li>Average cost of <span class="price-emphasis">$2000</span> per site for Scoping, BOM, Construction, and C.O.P. management</li>
                 <li>Includes many of our services</li>
               </ul>
