--- a/views/swift.html
+++ b/views/swift.html
@@ -126,7 +126,7 @@
         </div>
         <div>
           <div class="title">Smarter Lists</div>
-          <div class="body">Manage how you get through your workflow with live search and smart filters that adapt to changes live</div>
+          <div class="body">Manage how you get through your workflow with search and smart filters that adapt to changes live</div>
         </div>
       </div>
     </div>
