Update to Build The Future statement
Statement on main slide after landing.

--- a/views/main.html
+++ b/views/main.html
@@ -28,10 +28,8 @@
     <section class="sections plan section left">
         <div class="section-content">
             <div class="heading">
-                <div class="head">Build the Future</div>
-                <div class="sub">Technical and Management Services</div>
+                <div class="head">Closeout Specialists</div>
             </div>
-            <div class="body">Our clients build network infrastructure and we help them to do it better. We bring innovation, experience, and persistence to bear on each of our projects. We are constantly evolving and measuring ourselves, using data to make better decisions and building systems that create better outcomes. We are managers, technicians, and engineers dedicated to the success of our clients and driven by finding solutions to the challenges they face. </div>
         </div>
         <div class="cta-container">
             <div class="cta" ui-sref="closeout">Closeout <i class="icon ion-android-arrow-dropright"></i></div>
