Update to Build the Future on main page
Reworded statement.

--- a/views/main.html
+++ b/views/main.html
@@ -29,7 +29,9 @@
         <div class="section-content">
             <div class="heading">
                 <div class="head">Closeout Specialists</div>
+                <div class="sub">Closeout Management starting at $199 per site-project.</div>
             </div>
+            <div class="body"> For too long business people have said "you can't have it cheaper, faster, and better", and until Ontel, they've been mostly right. But there's a new era in management approaching and we are at its forefront. With our people and software, we've completed over 1500+ site-projects for Verizon, AT&T, T-Mobile, and Sprint at all levels. There's no other company that can deliver your closeouts faster, more accurately, and at less cost than Ontel - just give us the raw files and we take it from there. Find out more about our services below.  </div>
         </div>
         <div class="cta-container">
             <div class="cta" ui-sref="closeout">Closeout <i class="icon ion-android-arrow-dropright"></i></div>
