--- a/views/main.html
+++ b/views/main.html
@@ -31,7 +31,7 @@
                 <div class="head">Closeout Specialists</div>
                 <div class="sub">Closeout Management starting at $199 per site-project.</div>
             </div>
-            <div class="body"> For too long business people have said "you can't have it cheaper, faster, and better", and until Ontel, they've been mostly right. But there's a new era in management approaching and we are at its forefront. With our people and software, we've completed over 1500+ site-projects for Verizon, AT&T, T-Mobile, and Sprint at all levels. There's no other company that can deliver your closeouts faster, more accurately, and at less cost than Ontel - just give us the raw files and we take it from there. Find out more about our services below.  </div>
+            <div class="body">For too long business people have said "you can't have it cheaper, faster, and better", and until Ontel, they've been mostly right. But with over 1500+ site-projects completed since our founding, we are here to say that it's possible to get perfection without sacrificing profit. Just give us the specs of your project, and your raw photos and files, and we take it from there. Find out more about our services below.</div>
         </div>
         <div class="cta-container">
             <div class="cta" ui-sref="closeout">Closeout <i class="icon ion-android-arrow-dropright"></i></div>
