Update to landing-text

--- a/views/main.html
+++ b/views/main.html
@@ -16,11 +16,11 @@
             </div>
             <div class="landing-subtext ">
                 <div>
-                    <div>Management</div>
+                    <div>Closeout</div>
                     <div>Software</div>
                 </div>
                 <div>
-                    <div>Closeout</div>
+                    <div>Site-Development</div>
                 </div>
             </div>
         </div>
