Update to landing-text

--- a/views/main.html
+++ b/views/main.html
@@ -20,7 +20,7 @@
                     <div>Software</div>
                 </div>
                 <div>
-                    <div>Site-Development</div>
+                    <div>Management</div>
                 </div>
             </div>
         </div>
