Update to the closeout opening statement

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -5,16 +5,16 @@
   </div>
   <div class="product-container">
     <div class="section intro">
-      <div class="heading">Closeouts as low as $190</div>
+      <div class="heading">You give us the specs and raw files. We'll get you and your client paid</div>
       <div class="content">
         <p>
-          Forget what excuses sound like. Closeout in real-time, improve quality, and grow market share. Certified Technicians and Experienced Construction Managers manage your closeout process and take it to the next level with software.
+          Ontel is the largest 3rd party provider of closeout services in the U.S and we are growing. The reason our clients choose us is because they trust that we can represent their companies better than anyone else, whether it's advising on market specifications, providing technical and quality related feedback, working on your behald with the client to straighten out market requirements, or building advanced systems to collect and manage all of the data and scheduling our clients trust us with final milestone needed to get paid. 
         </p>
         <p>
-          We’ve found that one of the easiest ways to differentiate yourself from your competition and gain market share is to complete closeouts faster and with higher quality, so we’ve created a service to help our clients to do just that.
+          Companies choose us over hiring or traditional outsourcing providers because we bring results that scale up and down at a whim, all at a fixed low-cost. 
         </p>
         <p>
-          We coordinate, collect, validate, and process all of the elements needed for the C.O.P, ensuring your teams are supported in the successful collection and execution of the SOW at hand, all the way through.
+          Our closeout services come with a 100% risk-free offer, try us out, and if we can't compete with your existing resources, or if you don't find our service to your liking, we won't charge a cent.
         </p>
       </div>
     </div>
