--- a/views/main.html
+++ b/views/main.html
@@ -29,22 +29,21 @@
         <div class="section-content">
             <div class="heading">
                 <div class="head">Closeout Specialists</div>
-                <div class="sub">Closeout Management starting at $199 per site-project.</div>
+                <div class="sub">Closeout Management that gets you paid starting at $199 per site-project.</div>
             </div>
-            <div class="body">For too long people in telecommunications have said "you can't have it cheaper, faster, and better", and until Ontel, they've been mostly right. But with over 1500+ site-projects completed since our founding, we are here to say that with the right technology and people, it is possible to get perfection without expense to profit. We'll show you how.</div>
+            <div class="body">For too long people have said, "you can't have it cheaper, faster, and better at the same time". To their credit, they've been mostly right, but we've reached a new era of connectivity and technology where what was once the norm, is now out the window. Ontel and its clients are at the forefront of this change, where we've been trusted with over 1500+ site-projects closeouts since our founding, proof that with great people and technology, it is possible to have it all. We'll show you how.</div>
         </div>
         <div class="cta-container">
-            <div class="cta" ui-sref="closeout">Closeout <i class="icon ion-android-arrow-dropright"></i></div>
-            <div class="cta" ui-sref="management">MGMT <i class="icon ion-android-arrow-dropright"></i></div>
+            <div class="cta" ui-sref="find out more">C <i class="icon ion-android-arrow-dropright"></i></div> 
         </div>
     </section>
     <section class="sections run section right">
         <div class="section-content ">
             <div class="heading">
-                <div class="head">Automation for Everyone</div>
-                <div class="sub">Software for Wireless Contractors</div>
+                <div class="head">Closeout Software</div>
+                <div class="sub">The most powerful closeout software in the world</div>
             </div>
-            <div class="body">Swift Projects™ is the most powerful mobile and desktop management software platform built specifically for wireless general contractors and telecommunications projects. With Swift, users QA and closeout live, get instant stats and statuses, schedule teams, manage documents, focus conversations, and most importantly - prevent surprises. <span class="swift-cta">Find out more about how Swift streamlines operations and eliminates excuses.</span></div>
+            <div class="body">Swift Projects™  mobile and desktop management software platform built specifically for wireless general contractors and telecommunications projects. With Swift, users QA and closeout live, get instant stats and statuses, schedule teams, manage documents, focus conversations, and most importantly - prevent surprises. <span class="swift-cta">Find out more about how Swift streamlines operations and eliminates excuses.</span></div>
         </div>
         <div class="cta" ui-sref="swift">Swift Projects <i class="icon ion-android-arrow-dropright"></i></div>
     </section>
