Main page section 2 update

--- a/views/main.html
+++ b/views/main.html
@@ -29,9 +29,9 @@
         <div class="section-content">
             <div class="heading">
                 <div class="head">Closeout Specialists</div>
-                <div class="sub">Closeout Management that gets you paid starting at $199 per site-project.</div>
+                <div class="sub">Closeout Management that gets you paid, Starting at $199 per site-project.</div>
             </div>
-            <div class="body">For too long people have said, "you can't have it cheaper, faster, and better at the same time". To their credit, they've been mostly right, but we've reached a new era of connectivity and technology where what was once the norm, is now out the window. Ontel and its clients are at the forefront of this change, where we've been trusted with over 1500+ site-projects closeouts since our founding, proof that with great people and technology, it is possible to have it all. We'll show you how.</div>
+            <div class="body">For too long people have said, "you can't have it cheaper, faster, and better at the same time". To their credit, they've been mostly right, but we've reached a new era of connectivity and technology where what was once the norm, is now completely out of the window. Ontel and its clients are at the forefront of this change, where since our founding we've been trusted with over 1500+ site-projects closeouts all done cheaper, faster, and better at the same time, proof that with great people and technology, it is possible to have it all. We'll show you how.</div>
         </div>
         <div class="cta-container">
             <div class="cta" ui-sref="find out more">C <i class="icon ion-android-arrow-dropright"></i></div> 
@@ -41,9 +41,9 @@
         <div class="section-content ">
             <div class="heading">
                 <div class="head">Closeout Software</div>
-                <div class="sub">The most powerful closeout software in the world</div>
+                <div class="sub">The most powerful closeout software in the world, that even mom and pop can use.</div>
             </div>
-            <div class="body">Swift Projects™  mobile and desktop management software platform built specifically for wireless general contractors and telecommunications projects. With Swift, users QA and closeout live, get instant stats and statuses, schedule teams, manage documents, focus conversations, and most importantly - prevent surprises. <span class="swift-cta">Find out more about how Swift streamlines operations and eliminates excuses.</span></div>
+            <div class="body">Swift Projects™ is simply the best way to manage and close telecommunication projects for general contractors and egineering firms. We've combined products like SharePoint and Dropbox, and added innovation found no where else all together to make a mobile friendly, robust, software platform built specifically for wireless projects allows its users to organize complex projects that enable teams to QA complete work, submit closeout photos and videos live, get instant stats and statuses, schedule teams, manage documents, chat, and so much more. <span class="swift-cta">Find out more about how Swift can streamline operations and eliminates excuses.</span></div>
         </div>
         <div class="cta" ui-sref="swift">Swift Projects <i class="icon ion-android-arrow-dropright"></i></div>
     </section>
