Main page second statement update to text

--- a/views/main.html
+++ b/views/main.html
@@ -43,7 +43,7 @@
                 <div class="head">Closeout Software</div>
                 <div class="sub">The most powerful closeout software in the world, that even mom and pop can use.</div>
             </div>
-            <div class="body">Swift Projects™ is simply the best way to manage and close telecommunication projects for general contractors and egineering firms. We've combined products like SharePoint and Dropbox, and added innovation found no where else all together to make a mobile friendly, robust, software platform built specifically for wireless projects allows its users to organize complex projects that enable teams to QA complete work, submit closeout photos and videos live, get instant stats and statuses, schedule teams, manage documents, chat, and so much more. <span class="swift-cta">Find out more about how Swift can streamline operations and eliminates excuses.</span></div>
+            <div class="body">Swift Projects™ is simply the best way to manage and close telecommunication projects for general contractors and egineering firms. We've combined products like SharePoint and Dropbox, and added innovation found no where else together to make a mobile friendly, robust, software platform built specifically for wireless projects that allows users to organize complex projects, enable teams to QA complete work, submit closeout photos and videos live, get instant stats and statuses, schedule teams, manage documents, chat, and so much more. <span class="swift-cta">Find out more about how Swift can deliver profit to your project.</span></div>
         </div>
         <div class="cta" ui-sref="swift">Swift Projects <i class="icon ion-android-arrow-dropright"></i></div>
     </section>
